--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
         "cross-env": "^7.0.3",
         "gulp": "^5.0.0",
         "gulp-autoprefixer": "^9.0.0",
+        "gulp-clean-css": "^4.3.0",
         "gulp-concat": "^2.6.1",
         "gulp-file-include": "^2.3.0",
         "gulp-html-beautify": "^1.0.1",
         "gulp-sass": "^6.0.1",
         "gulp-sourcemaps": "^3.0.0",
+        "gulp-uglify": "^3.0.2",
         "sass": "^1.85.1"
     }
 }
